--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+
+
+    <link rel="stylesheet" href="style.css">
+    <title>Home - Kezdőlap</title>
 </head>
+
 <body>
     <header id="header">
-
+        <h2>Kezdőlap</h2>
     </header>
 
     <nav id="menu">
@@ -15,12 +20,29 @@
     </nav>
 
     <main id="main">
+        <section>
+            <article>
+                <h3>Üdv Látogató!</h3>
+                <p>Ha egyik képről sem ismernél fel, akkor bemutatkozom Neked: Lie Kolos vagyok, 42 éves full-stack
+                    programozó. Örülök, hogy érdeklődést mutatsz az oldalam iránt. Ha tetszik, kövess a Facebook-on is,
+                    és tedd azt, amit én is oly gyakran: nyomj egy lájkot :)!</p>
+                <div class="container">
+                    <div class="double">
+                        <img width="400" src="/images/people-city-man-night-preview.jpg" alt="Este a városban...">
+                    </div>
+                    <div class="double">
+                        <img width="400" src="/images/596caf473d398-preview.jpg" alt="Nappal a természetben...">
+                    </div>
+                </div>
 
+            </article>
+        </section>
     </main>
 
     <footer id="footer">
-        
+        <a href="#">Vissza a menühöz</a>
     </footer>
 
 </body>
+
 </html>
