--- a/gallery.html
+++ b/gallery.html
@@ -8,66 +8,34 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Home - Kezdőlap</title>
+    <script src="script.js"></script>
+    <title>Gallery - Képgaléria</title>
 </head>
 
 <body>
     <header id="header">
-        Kezdőlap
-   </header>
+        Képgaléria
+    </header>
 
     <nav id="menu">
         <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a class="active" href="gallery.html">Gallery</a></li>
             <li><a href="works.html">Works</a></li>
-            <li><a class="active" href="/index.html">Home</a></li>          
-          </ul>
+            <li><a href="/index.html">Home</a></li>
+        </ul>
     </nav>
 
     <main class="mother">
         <section>
             <article>
-                <h3>Üdv Látogató!</h3>
-                <p>Ha egyik képről sem ismernél fel, akkor bemutatkozom Neked: Lie Kolos vagyok, 42 éves full-stack
-                    programozó. Örülök, hogy érdeklődést mutatsz az oldalam iránt. Ha tetszik, kövess a <a class="link" href="https://facebook.com" target="blank">Facebook</a>-on is,
-                    és tedd azt, amit én is oly gyakran: nyomj egy lájkot :)!</p>
-                <div class="row">
-                    <div class="cont-2">
-                        <img class="img-decor" src="/images/people-city-man-night-preview.jpg" alt="Este a városban...">
-                    </div>
-                    <div class="cont-2">
-                        <img class="img-decor" src="/images/596caf473d398-preview.jpg" alt="Nappal a természetben...">
-                    </div>
-                </div>
-                <hr width="50%">
-                </article>
-                <article>
-                    <h3>Hívj bátran ha olyan embert keresel, aki ...</h3>
-                    <div class="row">
-                        <div class="cont-3">
-                            <div class="box">
-                                <p>Problémamegoldó</p>
-                                <img src="/images/question-mark-graphics.jpg" alt="">
-
-                            </div>
-                        </div>
-                        <div class="cont-3">
-                            <div class="box">
-                                <p>Megfontolt</p>
-                                <img src="/images/man-with-black-necktie-illustration.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="cont-3">
-                            <div class="box">
-                                <p>Költséghatékony</p>
-                                <img src="/images/burger-2065072_1280.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </article>
+                <script>
+                    kepez();
+                </script>
+            </article>
         </section>
     </main>
+    
     <aside class="side">
         <section>
             <article>
@@ -76,7 +44,7 @@
                 <div class="elfsight-app-781f613f-9454-4e17-a709-c9d36704ea7f"></div>
             </article>
         </section>
-        
+
     </aside>
 
     <footer id="footer">
