Képek elérési útjának javítása (induló / nélkül).

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="works.html">Works</a></li>
-            <li><a class="active" href="/index.html">Home</a></li>          
+            <li><a class="active" href="index.html">Home</a></li>          
           </ul>
     </nav>
 
@@ -48,20 +48,20 @@
                         <div class="cont-3">
                             <div class="box">
                                 <p>Problémamegoldó</p>
-                                <img src="/images/question-mark-graphics.jpg" alt="">
+                                <img src="images/question-mark-graphics.jpg" alt="">
 
                             </div>
                         </div>
                         <div class="cont-3">
                             <div class="box">
                                 <p>Megfontolt</p>
-                                <img src="/images/man-with-black-necktie-illustration.jpg" alt="">
+                                <img src="images/man-with-black-necktie-illustration.jpg" alt="">
                             </div>
                         </div>
                         <div class="cont-3">
                             <div class="box">
                                 <p>Költséghatékony</p>
-                                <img src="/images/burger-2065072_1280.jpg" alt="">
+                                <img src="images/burger-2065072_1280.jpg" alt="">
                             </div>
                         </div>
                     </div>
