--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="works.html">Works</a></li>
-            <li><a href="/index.html">Home</a></li>          
+            <li><a href="index.html">Home</a></li>          
           </ul>
     </nav>
 
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="cont-3">
                         <div class="box">
-                            <img src="/images/man-in-black-suit-jacket-illustration.jpg" alt="">
+                            <img src="images/man-in-black-suit-jacket-illustration.jpg" alt="">
                         </div>
                     </div>
                     <div class="cont-3">
