--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
             <li><a href="about.html">About</a></li>
             <li><a class="active" href="gallery.html">Gallery</a></li>
             <li><a href="works.html">Works</a></li>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
 
