--- a/works.html
+++ b/works.html
@@ -21,7 +21,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a class="active" href="works.html">Works</a></li>
-            <li><a href="/index.html">Home</a></li>          
+            <li><a href="index.html">Home</a></li>          
           </ul>
     </nav>
 
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="cont-23">
                         <div class="box">
-                            <img src="/images/work1.jpg" alt="">
+                            <img src="images/work1.jpg" alt="">
                         </div>
                     </div>
                     <div class="cont-3">
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="cont-23">
                         <div class="box">
-                            <img src="/images/work2.jpg" alt="">
+                            <img src="images/work2.jpg" alt="">
                         </div>
                     </div>
                     <div class="cont-3">
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="cont-23">
                         <div class="box">
-                            <img src="/images/work3.jpg" alt="">
+                            <img src="images/work3.jpg" alt="">
                         </div>
                     </div>
                     <div class="cont-3">
